<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todo Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item_label">Add a new item</string>
    <string name="add_bt">Add</string>
    <string name="add_bt_label">Add</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="bt_save">Save</string>
    <string name="bt_save_label">Save</string>
    <string name="ed_item_below_label">Edit Item Below:</string>
    <string name="edit_item_label">Edit Item Below:</string>
    <string name="chk_priority">Priority</string>
    <string name="itemDueDate_label">Due Date</string>
    
    
    <string-array name="Items_priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
        <string name="priority_label">Priority:</string>
        <string name="dueDate_label">Due Date</string>

</resources>
