<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.todoapp.EditActivity" >
    
    <EditText
        android:id="@+id/edItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edItem"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/edit_item_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btSaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edItem"
        android:layout_below="@+id/edItem"
        android:layout_marginTop="29dp"
        android:hint="@string/bt_save"
        android:onClick="onSaveItem"
        android:text="@string/bt_save_label" />

</RelativeLayout>
